--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,8 +1,10 @@
 <section>
-    <inicio-header (eventoFiltrarPorSubcategoria)="filtrarProductos($event)" (eventoOrdenarPorPrecio)="ordenarProductos($event)"></inicio-header>
-    
+    <inicio-header (eventoBuscarProducto)="buscarProducto($event)"
+        (eventoFiltrarPorSubcategoria)="filtrarProductos($event)"
+        (eventoOrdenarPorPrecio)="ordenarProductos($event)"></inicio-header>
+
     <mat-spinner *ngIf="productos.length == 0 && !productosCargados"></mat-spinner>
-    <p *ngIf="productos.length == 0 && productosCargados">Por el momento, no hay productos disponibles en esta categoría. Disculpe las molestias.</p>
+    <p *ngIf="productos.length == 0 && productosCargados">Por el momento, no hay productos disponibles con estas características. Disculpe las molestias.</p>
     <div class="productos">
         <producto *ngFor="let producto of productos" [producto]="producto"></producto>
     </div>
