--- a/src/app/pages/inicio/inicio.component.css
+++ b/src/app/pages/inicio/inicio.component.css
@@ -22,7 +22,7 @@ section {
 
 @media (min-width: 1038px) {
     section {
-        height: auto;
+        min-height: 120vh;
     }
 
     .productos {
