--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -56,7 +56,7 @@ nav ul li a p,
     background: -webkit-linear-gradient(to bottom, var(--primary-color), var(--primary-gradient-color));
     background: linear-gradient(to bottom, var(--primary-color), var(--primary-gradient-color));
     padding: 0 0 15px 10px;
-    animation: menu-opened-animation .15s normal ease-out;
+    animation: animacion-abrir-menu .15s normal ease-out;
     z-index: 9999;
     box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -152,7 +152,7 @@ nav ul li a p,
     }
 }
 
-@keyframes menu-opened-animation {
+@keyframes animacion-abrir-menu {
     0% {
         opacity: 0;
     }
