--- a/src/app/components/producto/producto.component.css
+++ b/src/app/components/producto/producto.component.css
@@ -13,7 +13,7 @@
 .informacion-producto {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
     gap: 25px;
     width: 100%;
