--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div id="company-data">
-        <img src="../../../assets/images/logo.webp" alt="Compra Gamer logo">
+        <img src="../../../assets/imagenes/logo.webp" alt="Compra Gamer logo">
         <p>Compra Gamer</p>
     </div>
     <p>&copy; Matías Gabriel Blanco Toledo</p>
