Añado imposibilidad de agregar al carrito

--- a/src/app/components/producto/producto.component.css
+++ b/src/app/components/producto/producto.component.css
@@ -51,6 +51,11 @@
     transition: .3s;
 }
 
+.producto button:disabled {
+    background: gray;
+    cursor: not-allowed;
+}
+
 @media (min-width: 768px) {
     .producto {
         height: 385px;
